<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="query_hint">Enter search term</string>
    <string name="search_btn_lable">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_options">SearchOptionsActivity</string>
    <string name="search_options">Erweiterte Suchoptionen</string>
    <string name="image_size">Größe des Bildes</string>
    <string name="color_filter">Farbfilter</string>
    <string name="image_type">Bild-Art</string>
    <string name="site_filter">Site Filter</string>
    <string name="save_btn_lable">sparen</string>

	<string-array name="grid_option_size_array">
		<item>"Jeder"</item>
		<item>"klein"</item>
		<item>"mittlere"</item>
		<item>"groß"</item>
		<item>"sehr große"</item>
	</string-array>

	<string-array name="grid_option_color_array">
		<item>"Alle"</item>
		<item>"Schwarz"</item>
		<item>"Blau"</item>
		<item>"Braun"</item>
		<item>"Grau"</item>
		<item>"Grün"</item>
		<item>"Orange"</item>
		<item>"Rosa"</item>
		<item>"Lila"</item>
		<item>"Rot"</item>
		<item>"Teal"</item>
		<item>"Weiß"</item>
		<item>"Gelb"</item>
	</string-array>
	
	<string-array name="grid_option_type_array">
		<item>"Jeder"</item>
		<item>"Gesichter"</item>
		<item>"Fotos"</item>
		<item>"Clip Art"</item>
		<item>"Zeichnungen"</item>
	</string-array>
	
</resources>
